--- a/index.html
+++ b/index.html
@@ -9,20 +9,20 @@
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
         <link rel="icon" type="image/ico" href="img/favicon.html"/>
         <!-- Open Graph Meta Tags-->
-        <meta property="og:title" content="UP-MOD.TECH - Unlock Apps Installer"/>
+        <meta property="og:title" content="GAMES REWARDS"/>
         <!-- Title which is displayed when your site is shared on social networks -->
-        <meta property="og:description" content="Download Tweaked Apps for Android and iOS"/>
+        <meta property="og:description" content="Devenez un joueur d'exception avec upmod.me ! Découvrez les triches & astuces d'un autre univers""/>
         <!-- Website description which is displayed when your site is shared on social networks -->
         <meta property="og:type" content="website"/>
-        <meta property="og:url" content="../up-mod.tech/index.html"/>
+        <meta property="og:url" content="../upmod.me/index.html"/>
         <!-- Your Website URL -->
         <meta property="og:image" content="../static.hugedomains.com/images/logo_huge_domains.gif"/>
         <!-- Absolute Path to the Image which will display, when your website is shared on social networks -->
         <!-- Twitter Meta -->
         <meta name="twitter:card" content="summary"/>
         <meta name="twitter:site" content="@tweetname"/>
-        <meta name="twitter:title" content="UP-MOD.TECH"/>
-        <meta name="twitter:description" content="Download Unlocked Apps for Android and iOS"/>
+        <meta name="twitter:title" content="GAMES REWARDS"/>
+        <meta name="twitter:description" content="GET GEMS AND DIAMONDS FOR YOUR FAVORITE GAMES"/>
         <meta name="twitter:image" content="../static.hugedomains.com/images/logo_huge_domains.gif"/>
         <!-- Icons -->
         <link rel="stylesheet" href="../cdn.linearicons.com/free/1.0.0/icon-font.min.css">
