--- a/index.html
+++ b/index.html
@@ -415,12 +415,12 @@
                                     <div class="tweaked-apps-grid-item-background">
                                         <div class="tweaked-apps-grid-item-content">
                                             <div class="tweaked-apps-grid-item-image-wrapper">
-                                                <img src="img/youtube.png" class="tweaked-apps-grid-item-image img-fluid"/>
+                                                <img src="img/dragon6city.webp" class="tweaked-apps-grid-item-image img-fluid"/>
                                             </div>
                                             <div class="tweaked-apps-grid-item-information">
-                                                <div class="tweaked-app-title">youtube Subscribes</div>
+                                                <div class="tweaked-app-title">Dragon City</div>
                                                 <div class="tweaked-app-button-wrapper">
-                                                    <a href="https://moded.ga/youtube">start</a>
+                                                    <a href="https://moded.ga/dragon-city">start</a>
                                                 </div>
                                             </div>
                                         </div>
