--- a/index.html
+++ b/index.html
@@ -415,7 +415,7 @@
                                     <div class="tweaked-apps-grid-item-background">
                                         <div class="tweaked-apps-grid-item-content">
                                             <div class="tweaked-apps-grid-item-image-wrapper">
-                                                <img src="img/dragon6city.webp" class="tweaked-apps-grid-item-image img-fluid"/>
+                                                <img src="img/dragon-city.webp" class="tweaked-apps-grid-item-image img-fluid"/>
                                             </div>
                                             <div class="tweaked-apps-grid-item-information">
                                                 <div class="tweaked-app-title">Dragon City</div>
