--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                                             <div class="tweaked-apps-grid-item-information">
                                                 <div class="tweaked-app-title">Genshin Impact</div>
                                                 <div class="tweaked-app-button-wrapper">
-                                                    <a href="https://moded.ga/genshin-impact">start</a>
+                                                    <a href="https://mesjeux.live/genshin-impact">start</a>
                                                 </div>
                                             </div>
                                         </div>
@@ -88,7 +88,7 @@
                                             <div class="tweaked-apps-grid-item-information">
                                                 <div class="tweaked-app-title"> Brawl Stars</div>
                                                 <div class="tweaked-app-button-wrapper">
-                                                    <a href="https://moded.ga/brawl-stars">start</a>
+                                                    <a href="https://mesjeux.live/brawl-stars">start</a>
                                                 </div>
                                             </div>
                                         </div>
@@ -103,7 +103,7 @@
                                             <div class="tweaked-apps-grid-item-information">
                                                 <div class="tweaked-app-title">Valorant</div>
                                                 <div class="tweaked-app-button-wrapper">
-                                                    <a href="https://moded.ga/valorant">start</a>
+                                                    <a href="https://mesjeux.live/valorant">start</a>
                                                 </div>
                                             </div>
                                         </div>
@@ -118,7 +118,7 @@
                                             <div class="tweaked-apps-grid-item-information">
                                                 <div class="tweaked-app-title">Summoners War</div>
                                                 <div class="tweaked-app-button-wrapper">
-                                                    <a href="https://moded.ga/summoners-war">start</a>
+                                                    <a href="https://mesjeux.live/summoners-war">start</a>
                                                 </div>
                                             </div>
                                         </div>
@@ -133,7 +133,7 @@
                                             <div class="tweaked-apps-grid-item-information">
                                                 <div class="tweaked-app-title">Fortnite</div>
                                                 <div class="tweaked-app-button-wrapper">
-                                                    <a href="https://moded.ga/fortnite">start</a>
+                                                    <a href="https://mesjeux.live/fortnite">start</a>
                                                 </div>
                                             </div>
                                         </div>
@@ -148,7 +148,7 @@
                                             <div class="tweaked-apps-grid-item-information">
                                                 <div class="tweaked-app-title">Minecraft PE</div>
                                                 <div class="tweaked-app-button-wrapper">
-                                                    <a href="https://moded.ga/minecraft">start</a>
+                                                    <a href="https://mesjeux.live/minecraft">start</a>
                                                 </div>
                                             </div>
                                         </div>
@@ -163,7 +163,7 @@
                                             <div class="tweaked-apps-grid-item-information">
                                                 <div class="tweaked-app-title">NBA 2K22</div>
                                                 <div class="tweaked-app-button-wrapper">
-                                                    <a href="https://moded.ga/nba22">start</a>
+                                                    <a href="https://mesjeux.live/nba22">start</a>
                                                 </div>
                                             </div>
                                         </div>
@@ -178,7 +178,7 @@
                                             <div class="tweaked-apps-grid-item-information">
                                                 <div class="tweaked-app-title">Clash of Clans</div>
                                                 <div class="tweaked-app-button-wrapper">
-                                                    <a href="https://moded.ga/clash-of-clans">start</a>
+                                                    <a href="https://mesjeux.live/clash-of-clans">start</a>
                                                 </div>
                                             </div>
                                         </div>
@@ -193,7 +193,7 @@
                                             <div class="tweaked-apps-grid-item-information">
                                                 <div class="tweaked-app-title">Pokemon Go</div>
                                                 <div class="tweaked-app-button-wrapper">
-                                                    <a href="https://moded.ga/pokemon-go">start</a>
+                                                    <a href="https://mesjeux.live/pokemon-go">start</a>
                                                 </div>
                                             </div>
                                         </div>
@@ -208,7 +208,7 @@
                                             <div class="tweaked-apps-grid-item-information">
                                                 <div class="tweaked-app-title">Spotify Premium</div>
                                                 <div class="tweaked-app-button-wrapper">
-                                                    <a href="https://moded.ga/spotify-premium">start</a>
+                                                    <a href="https://mesjeux.live/spotify-premium">start</a>
                                                 </div>
                                             </div>
                                         </div>
@@ -223,7 +223,7 @@
                                             <div class="tweaked-apps-grid-item-information">
                                                 <div class="tweaked-app-title">Subway Surfers</div>
                                                 <div class="tweaked-app-button-wrapper">
-                                                    <a href="https://moded.ga/subway-surfers">start</a>
+                                                    <a href="https://mesjeux.live/subway-surfers">start</a>
                                                 </div>
                                             </div>
                                         </div>
@@ -238,7 +238,7 @@
                                             <div class="tweaked-apps-grid-item-information">
                                                 <div class="tweaked-app-title">Tinder Gold</div>
                                                 <div class="tweaked-app-button-wrapper">
-                                                    <a href="https://moded.ga/tinder-gold">start</a>
+                                                    <a href="https://mesjeux.live/tinder-gold">start</a>
                                                 </div>
                                             </div>
                                         </div>
@@ -255,7 +255,7 @@
                                             <div class="tweaked-apps-grid-item-information">
                                                 <div class="tweaked-app-title">8 Ball Pool</div>
                                                 <div class="tweaked-app-button-wrapper">
-                                                    <a href="https://moded.ga/8ballpool">start</a>
+                                                    <a href="https://mesjeux.live/8ballpool">start</a>
                                                 </div>
                                             </div>
                                         </div>
@@ -270,7 +270,7 @@
                                             <div class="tweaked-apps-grid-item-information">
                                                 <div class="tweaked-app-title">Hay Day</div>
                                                 <div class="tweaked-app-button-wrapper">
-                                                    <a href="https://moded.ga/hay-day">start</a>
+                                                    <a href="https://mesjeux.live/hay-day">start</a>
                                                 </div>
                                             </div>
                                         </div>
@@ -285,7 +285,7 @@
                                             <div class="tweaked-apps-grid-item-information">
                                                 <div class="tweaked-app-title">Archero</div>
                                                 <div class="tweaked-app-button-wrapper">
-                                                    <a href="https://moded.ga/archero">start</a>
+                                                    <a href="https://mesjeux.live/archero">start</a>
                                                 </div>
                                             </div>
                                         </div>
@@ -300,7 +300,7 @@
                                             <div class="tweaked-apps-grid-item-information">
                                                 <div class="tweaked-app-title">Call of Duty</div>
                                                 <div class="tweaked-app-button-wrapper">
-                                                    <a href="https://moded.ga/call-of-duty">start</a>
+                                                    <a href="https://mesjeux.live/call-of-duty">start</a>
                                                 </div>
                                             </div>
                                         </div>
@@ -315,7 +315,7 @@
                                             <div class="tweaked-apps-grid-item-information">
                                                 <div class="tweaked-app-title">Among Us</div>
                                                 <div class="tweaked-app-button-wrapper">
-                                                    <a href="https://moded.ga/amongus">start</a>
+                                                    <a href="https://mesjeux.live/amongus">start</a>
                                                 </div>
                                             </div>
                                         </div>
@@ -330,7 +330,7 @@
                                             <div class="tweaked-apps-grid-item-information">
                                                 <div class="tweaked-app-title">Xbox Cards</div>
                                                 <div class="tweaked-app-button-wrapper">
-                                                    <a href="https://moded.ga/xbox-cards">start</a>
+                                                    <a href="https://mesjeux.live/xbox-cards">start</a>
                                                 </div>
                                             </div>
                                         </div>
@@ -345,7 +345,7 @@
                                             <div class="tweaked-apps-grid-item-information">
                                                 <div class="tweaked-app-title">Coin Master</div>
                                                 <div class="tweaked-app-button-wrapper">
-                                                    <a href="https://moded.ga/coin-master">start</a>
+                                                    <a href="https://mesjeux.live/coin-master">start</a>
                                                 </div>
                                             </div>
                                         </div>
@@ -360,7 +360,7 @@
                                             <div class="tweaked-apps-grid-item-information">
                                                 <div class="tweaked-app-title">Clash Royale</div>
                                                 <div class="tweaked-app-button-wrapper">
-                                                    <a href="https://moded.ga/clash-royal">start</a>
+                                                    <a href="https://mesjeux.live/clash-royal">start</a>
                                                 </div>
                                             </div>
                                         </div>
@@ -375,7 +375,7 @@
                                             <div class="tweaked-apps-grid-item-information">
                                                 <div class="tweaked-app-title">GTA 5</div>
                                                 <div class="tweaked-app-button-wrapper">
-                                                    <a href="https://moded.ga/gta5">start</a>
+                                                    <a href="https://mesjeux.live/gta5">start</a>
                                                 </div>
                                             </div>
                                         </div>
@@ -390,7 +390,7 @@
                                             <div class="tweaked-apps-grid-item-information">
                                                 <div class="tweaked-app-title">Free Fire</div>
                                                 <div class="tweaked-app-button-wrapper">
-                                                    <a href="https://moded.ga/freefire">start</a>
+                                                    <a href="https://mesjeux.live/freefire">start</a>
                                                 </div>
                                             </div>
                                         </div>
@@ -405,7 +405,7 @@
                                             <div class="tweaked-apps-grid-item-information">
                                                 <div class="tweaked-app-title">PUBG</div>
                                                 <div class="tweaked-app-button-wrapper">
-                                                    <a href="https://moded.ga/pubg">start</a>
+                                                    <a href="https://mesjeux.live/pubg">start</a>
                                                 </div>
                                             </div>
                                         </div>
@@ -420,7 +420,7 @@
                                             <div class="tweaked-apps-grid-item-information">
                                                 <div class="tweaked-app-title">Dragon City</div>
                                                 <div class="tweaked-app-button-wrapper">
-                                                    <a href="https://moded.ga/dragon-city">start</a>
+                                                    <a href="https://mesjeux.live/dragon-city">start</a>
                                                 </div>
                                             </div>
                                         </div>
@@ -436,7 +436,7 @@
                                             <div class="tweaked-apps-grid-item-information">
                                                 <div class="tweaked-app-title">IMVU</div>
                                                 <div class="tweaked-app-button-wrapper">
-                                                    <a href="https://moded.ga/imvu">start</a>
+                                                    <a href="https://mesjeux.live/imvu">start</a>
                                                 </div>
                                             </div>
                                         </div>
@@ -451,7 +451,7 @@
                                             <div class="tweaked-apps-grid-item-information">
                                                 <div class="tweaked-app-title">Mobile Legends</div>
                                                 <div class="tweaked-app-button-wrapper">
-                                                    <a href="https://moded.ga/mobile-legends">start</a>
+                                                    <a href="https://mesjeux.live/mobile-legends">start</a>
                                                 </div>
                                             </div>
                                         </div>
@@ -466,7 +466,7 @@
                                             <div class="tweaked-apps-grid-item-information">
                                                 <div class="tweaked-app-title">PES2021</div>
                                                 <div class="tweaked-app-button-wrapper">
-                                                    <a href="https://moded.ga/pes21">start</a>
+                                                    <a href="https://mesjeux.live/pes21">start</a>
                                                 </div>
                                             </div>
                                         </div>
@@ -481,7 +481,7 @@
                                             <div class="tweaked-apps-grid-item-information">
                                                 <div class="tweaked-app-title">ROBLOX</div>
                                                 <div class="tweaked-app-button-wrapper">
-                                                    <a href="https://moded.ga/robux">start</a>
+                                                    <a href="https://mesjeux.live/robux">start</a>
                                                 </div>
                                             </div>
                                         </div>
@@ -497,7 +497,7 @@
                                             <div class="tweaked-apps-grid-item-information">
                                                 <div class="tweaked-app-title">Apex Legends</div>
                                                 <div class="tweaked-app-button-wrapper">
-                                                    <a href="https://moded.ga/apex-legends">start</a>
+                                                    <a href="https://mesjeux.live/apex-legends">start</a>
                                                 </div>
                                             </div>
                                         </div>
@@ -512,7 +512,7 @@
                                             <div class="tweaked-apps-grid-item-information">
                                                 <div class="tweaked-app-title">Fifa 2022</div>
                                                 <div class="tweaked-app-button-wrapper">
-                                                    <a href="https://moded.ga/fifa22">start</a>
+                                                    <a href="https://mesjeux.live/fifa22">start</a>
                             </div>
 
                             <div class="search-error-wrapper">
