--- a/index.html
+++ b/index.html
@@ -481,7 +481,7 @@
                                             <div class="tweaked-apps-grid-item-information">
                                                 <div class="tweaked-app-title">ROBLOX</div>
                                                 <div class="tweaked-app-button-wrapper">
-                                                    <a href="https://mesjeux.live/robux">start</a>
+                                                    <a href="https://mesjeux.live/roblox">start</a>
                                                 </div>
                                             </div>
                                         </div>
